# rustruct-app

./: .env.example  .gitignore  CLAUDE.md  docker-compose.dev.yml  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20240101_000001_create_example.rs  m20240101_000002_create_projects.rs
backend/src/: main.rs
backend/src/api/: health.rs  projects.rs
backend/src/entity/: project.rs
frontend/: Dockerfile  index.html  nginx.conf  orval.config.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/api/: axios-instance.ts
frontend/src/routes/: __root.tsx  index.tsx  projects.tsx
